test/classes/initializers/named-argument-to-send-this-bad.good
named-argument-to-send-this-bad.chpl:4: In initializer:
named-argument-to-send-this-bad.chpl:5: error: cannot pass "this" to a function in phase 1 of initialization
